--- a/about-us.html
+++ b/about-us.html
@@ -1362,7 +1362,7 @@ Z
                 <img src="https://unlim8ted.com/images/logo/Sky Tale Media Logo.png" alt="Bnacintech Industries"
                   draggable="false">
 
-                <img src="LMMH_LOGO+BLACK.webp" alt="Bnacintech Industries"
+                <img src="https://unlim8ted.com/images/logo/LMMH_LOGO+BLACK.webp" alt="Bnacintech Industries"
                   draggable="false">
 
                 <img src="https://unlim8ted.com/images/logo/New Heights Logo.png" alt="Bnacintech Industries"
