--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Unlim8ted</title>
+  <title>Unlim8ted Home</title>
   <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon" />
   <meta name="description"
     content="Unlim8ted Studios builds films, games, music, books, software, and AI—crafted as cinematic experiences with no creative limits." />
