update physical product mappings

--- a/products/physical-items.html
+++ b/products/physical-items.html
@@ -599,22 +599,18 @@
         desc: "Who knew that the softest hoodie you'll ever own comes with such...",
         category: "hoodies",
         priceLabel: "$35.50 – $47.00",
-        image: "https://150721284.cdn6.editmysite.com/uploads/1/5/0/7/150721284/Z73O3JCBDLCW5PGZTREXE3GR.jpeg?width=2560&optimize=medium",
-        squareLink: "https://unlim8ted.com/products/squareproduct#unlim8ted-t-shirt/1?cp=true&sa=true&sbp=false&q=false",
-        variants: { variant: ["Black", "Navy", "Heather Grey"], option: ["S", "M", "L", "XL", "2XL"] }
-      },
+        image: "https://150721284.cdn6.editmysite.com/uploads/1/5/0/7/150721284/Z73O3JCBDLCW5PGZTREXE3GR.jpeg?width=2560&optimize=medium",      },
       {
-        id: "unlim8ted-tshirt",
+        id: "unlim8ted-t-shirt",
         title: "Unlim8ted t-shirt",
         desc: "We’re gonna make you an offe...",
         category: "t-shirts",
         priceLabel: "$13.50",
         image: "https://150721284.cdn6.editmysite.com/uploads/1/5/0/7/150721284/s649217925131779828_p1_i5_w2000.jpeg?width=2400&optimize=medium",
-        squareLink: "https://unlim8ted.com/products/squareproduct#unlim8ted-t-shirt/1?cp=true&sa=true&sbp=false&q=false",
-        variants: { variant: ["Black", "White", "Navy"], option: ["S", "M", "L", "XL", "2XL"] }
+
       },
       {
-        id: "meatball-tshirt",
+        id: "the-life-of-a-meatball-unisex-t-shirt",
         title: "The Life of a Meatball Unisex t-shirt",
         desc: "We’re gonna make you an offe...",
         category: "t-shirts",
@@ -624,7 +620,7 @@
         variants: { variant: ["Black", "White"], option: ["S", "M", "L", "XL", "2XL"] }
       },
       {
-        id: "meatball-slides",
+        id: "the-life-of-a-meatball-men-s-slides",
         title: "The Life of a Meatball Men’s slides",
         desc: "What’s a summer without comf...",
         category: "accessories",
@@ -634,7 +630,7 @@
         variants: { variant: ["Black", "White"], option: ["8", "9", "10", "11", "12"] }
       },
       {
-        id: "meatball-puzzle",
+        id: "the-life-of-a-meatball-jigsaw-puzzle",
         title: "The Life of a Meatball Jigsaw puzzle",
         desc: "Assembling puzzles is the pe...",
         category: "home",
@@ -644,7 +640,7 @@
         variants: { variant: ["Standard"], option: ["One size"] }
       },
       {
-        id: "unlim8ted-stickers",
+        id: "unlim8ted-bubble-free-stickers",
         title: "Unlim8ted Bubble-free stickers",
         desc: "Any item can be exciting wit...",
         category: "stickers",
@@ -654,7 +650,7 @@
         variants: { variant: ["Matte", "Gloss"], option: ["Small", "Medium", "Large"] }
       },
       {
-        id: "windbreaker",
+        id: "unisex-lightweight-zip-up-windbreaker",
         title: "Unisex lightweight zip up windbreaker",
         desc: "Light as a feather, this jac...",
         category: "accessories",
@@ -664,7 +660,7 @@
         variants: { variant: ["Black", "Navy"], option: ["S", "M", "L", "XL", "2XL"] }
       },
       {
-        id: "unlim8ted-slides",
+        id: "unlim8ted-men-s-slides",
         title: "Unlim8ted Men’s slides",
         desc: "What’s a summer without comf...",
         category: "accessories",
@@ -674,7 +670,7 @@
         variants: { variant: ["Black", "White"], option: ["8", "9", "10", "11", "12"] }
       },
       {
-        id: "meatball-glass",
+        id: "the-life-of-a-meatball-shaker-pint-glass",
         title: "The Life of a Meatball Shaker pint glass",
         desc: "Enjoy your refreshing drinks...",
         category: "home",
@@ -684,7 +680,7 @@
         variants: { variant: ["Standard"], option: ["One size"] }
       },
       {
-        id: "unlim8ted-notebook",
+        id: "unlim8ted-spiral-notebook",
         title: "Unlim8ted Spiral notebook",
         desc: "A good notebook can help you...",
         category: "home",
@@ -694,8 +690,8 @@
         variants: { variant: ["Standard"], option: ["One size"] }
       },
       {
-        id: "mens-tshirt",
-        title: "Unlim8ted Men’s t-shirt",
+        id: "unlim8ted-men-s-t-shirt",
+        title: "Unlim8ted Athletic Men’s t-shirt",
         desc: "It’s the little details that...",
         category: "t-shirts",
         priceLabel: "$23.00",
@@ -704,7 +700,7 @@
         variants: { variant: ["Black", "White"], option: ["S", "M", "L", "XL", "2XL"] }
       },
       {
-        id: "trucker-cap",
+        id: "unlim8ted-trucker-cap",
         title: "Unlim8ted Trucker Cap",
         desc: "Classic trucker cap style wi...",
         category: "accessories",
@@ -714,7 +710,7 @@
         variants: { variant: ["Black", "Navy"], option: ["One size"] }
       },
       {
-        id: "beanie",
+        id: "unlim8ted-organic-ribbed-beanie",
         title: "Unlim8ted Organic ribbed beanie",
         desc: "This organic ribbed beanie i...",
         category: "accessories",
@@ -724,7 +720,7 @@
         variants: { variant: ["Black", "Heather Grey"], option: ["One size"] }
       },
       {
-        id: "coaster",
+        id: "unlim8ted-cork-back-coaster",
         title: "Unlim8ted Cork-back coaster",
         desc: "This cork-back coaster is a ...",
         category: "home",
