fix physical products going to incorrect pages

--- a/products/physical-items.html
+++ b/products/physical-items.html
@@ -848,7 +848,7 @@
 
     function goToProductPage(p){
       // integrates with /product page (hash = product id)
-      window.location.href = `/product#${encodeURIComponent(p.id)}`;
+      window.location.href = `/products/product#${encodeURIComponent(p.id)}`;
     }
 
     function renderGrid(){
